--- a/index.html
+++ b/index.html
@@ -28,15 +28,10 @@
     <section class="section section--story">
       <div class="container">
         <h2 class="section-title section-title--keycolor section-title--story">ストーリー</h2>
-        <div class="story">
-          <p class="text-center">郊外にある、歴史も古い小学校・・・<br>
-            いつの間にか、放課後に家庭科室から奇妙な叫び声が聞こえてくるという噂が流れ始めた。<br>
-            調査したが、噂の出どころはわからない。<br>
-            そんな矢先、某有名預言者ノストラエヌスが、「このままだと家庭科室が原因で、学校が滅びるだろう」と予言。<br>
-            生徒に人気のS先生が一人で調査に入ったが、いつまでも帰ってこない。<br>
-            不思議に思った生徒会長の君は、副会長の伊計島太郎と茨つくはの<br>
-            ２名を連れて家庭科室の前に来たが、ドアが開かない。<br>
-            さらにドアの前に画面とキーボードが。どうやら暗号を入力しろということらしい。</p>
+        <div class="story">人里離れた山奥にある研究所が何者かによりハッキングされてしまい、中に人が閉じ込められてしまった。<br>
+                  さらに研究用の危険な生き物が解き放たれてしまい、このままでは皆殺されてしまう。<br>
+                       ハッキングを解除して行脱出経路を作り、できるだけ多くの人を助け出そう。
+        　 <p class="text-center"></p>
           <div class="story__note__outer bg-color--gray">
             <ul class="story__note">
               <li>今、これを読んだ生徒会メンバー以外を呼んではいけない</li>
