--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
     <section class="section section--story">
       <div class="container">
         <h2 class="section-title section-title--keycolor section-title--story">ストーリー</h2>
-                  <div class="story">人里離れた山奥にある研究所が何者かによりハッキングされてしまい、中に人が閉じ込められてしまった。<br>
+                  <div class="story">
+        　 <p class="text-center"></p>人里離れた山奥にある研究所が何者かによりハッキングされてしまい、中に人が閉じ込められてしまった。<br>
                                      さらに研究用の危険な生き物が解き放たれてしまい、このままでは皆殺されてしまう。<br>
-                                     ハッキングを解除して行脱出経路を作り、できるだけ多くの人を助け出そう。
-        　 <p class="text-center"></p>
-          <div class="story__note__outer bg-color--gray">
+                                     ハッキングを解除して行脱出経路を作り、できるだけ多くの人を助け出そう。         
+           <div class="story__note__outer bg-color--gray">
             <ul class="story__note">
               <li>今、これを読んだ生徒会メンバー以外を呼んではいけない</li>
               <li>30分を超えるとS先生は出てこられない</li>
