--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                   <div class="story">
         　 <p class="text-center"></p>人里離れた山奥にある研究所が何者かによりハッキングされてしまい、中に人が閉じ込められてしまった。<br>
                                      さらに研究用の危険な生き物が解き放たれてしまい、このままでは皆殺されてしまう。<br>
-                                     ハッキングを解除して行脱出経路を作り、できるだけ多くの人を助け出そ
+                                     ハッキングを解除して行脱出経路を作り、できるだけ多くの人を助け出そう。
                    
            <div class="story__note__outer bg-color--gray">
             <ul class="story__note">
