--- a/main.html
+++ b/main.html
@@ -23,9 +23,8 @@
   </header>
   <main class="main main-page">
     <!-- タイトルエリア　ここから -->
-    <h1 class="main-title"><img src="assets/images/main-image.png" alt="封鎖された家庭科室からの脱出"></h1>
-    <!-- タイトルエリア　ここまで -->
-    <div id="stage">
+    <h1 class="main-title"><img src="スクリーンショット 2021-09-14 21.52.50.png" alt="封鎖された家庭科室からの脱出"></h1>
+    <!-- タイトルエリア　ここまで -->    <div id="stage">
 
       <!-- STAGE1　ここから -->
       <div id="sectionStage1" class="stage">
@@ -40,9 +39,8 @@
   
             <div class="container">
               <figure class="image__container">
-                <img src="assets/images/stage.png" alt="">
-              </figure>
-                
+                <img src="スクリーンショット 2021-09-13 11.39.08.png" alt="">
+              </figure>               
  <!--  YouTube貼り付け
               <div class="youtube__container">
                 <div class="youtube">
@@ -130,7 +128,7 @@ Youtube貼り付けここまで -->
                 <div class="column">
                   <!-- STAGE2-1問題セクション　ここから -->
                   <figure class="image__container">
-                    <img src="assets/images/stage.png" alt="">
+                    <img src="古今東西.pngalt=">
                   </figure>
                   <!-- STAGE2-1問題セクション　ここまで -->
                   <!-- STAGE2-1解答入力セクション　ここから -->
@@ -202,7 +200,7 @@ Youtube貼り付けここまで -->
               どうやら、廃棄にかかる費用がかかりすぎて小学校の運営が厳しくなったようだ。。<br>
               これらを解決するための最後の謎を解いていこう！</p>
             <figure class="image__container">
-              <img src="assets/images/stage.png" alt="">
+              <img src="スクリーンショット 2021-09-13 11.39.22.png alt="">
             </figure>
           </div>
         </section>
