--- a/main.html
+++ b/main.html
@@ -39,7 +39,7 @@
   
             <div class="container">
               <figure class="image__container">
-                <img src="スクリーンショット 2021-09-13 11.39.08.png" alt="">
+                <img src="前後左右.ai alt="">
               </figure>               
  <!--  YouTube貼り付け
               <div class="youtube__container">
