--- a/main.html
+++ b/main.html
@@ -39,7 +39,7 @@
   
             <div class="container">
               <figure class="image__container">
-                <img src="前後左右.ai alt="">
+                <img src="前後左右.ai alt=">
               </figure>               
  <!--  YouTube貼り付け
               <div class="youtube__container">
@@ -128,7 +128,8 @@ Youtube貼り付けここまで -->
                 <div class="column">
                   <!-- STAGE2-1問題セクション　ここから -->
                   <figure class="image__container">
-                    <img src="古今東西.pngalt=">
+                    <img src="真剣.ai">alt=
+                                         
                   </figure>
                   <!-- STAGE2-1問題セクション　ここまで -->
                   <!-- STAGE2-1解答入力セクション　ここから -->
@@ -200,7 +201,8 @@ Youtube貼り付けここまで -->
               どうやら、廃棄にかかる費用がかかりすぎて小学校の運営が厳しくなったようだ。。<br>
               これらを解決するための最後の謎を解いていこう！</p>
             <figure class="image__container">
-              <img src="スクリーンショット 2021-09-13 11.39.22.png alt="">
+              <img src="一の数問題.ai ">
+                      
             </figure>
           </div>
         </section>
