--- a/main.html
+++ b/main.html
@@ -23,8 +23,8 @@
   </header>
   <main class="main main-page">
     <!-- タイトルエリア　ここから -->
-    <h1 class="main-title"><img src="スクリーンショット 2021-09-14 21.52.50.png" alt="封鎖された家庭科室からの脱出"></h1>
-    <!-- タイトルエリア　ここまで -->    <div id="stage">
+    <h1 class="main-title"><img src="怪物がさまよう研究所からの脱出.ai" alt="封鎖された家庭科室からの脱出"></h1>
+<!-- タイトルエリア　ここまで -->    <div id="stage">
 
       <!-- STAGE1　ここから -->
       <div id="sectionStage1" class="stage">
