--- a/final.html
+++ b/final.html
@@ -11,7 +11,7 @@
 <body>
   <header class="header">
     <div class="container">
-      <div class="header__logo"><img src="スクリーンショット 2021-09-14 21.52.50.png alt="チームロゴ"></div>
+      <div class="header__logo"><img src="怪物がさまよう研究所からの脱出.ai"></div>チームロゴ
       <div class="header__name">N・S高生制作サイト</div>
     </div>
   </header>
