--- a/hint1.html
+++ b/hint1.html
@@ -23,7 +23,7 @@
   </header>
   <main class="main hint-page">
     <!-- タイトルエリア　ここから -->
-    <h1 class="main-title"><img src="スクリーンショット 2021-09-14 21.52.50.pngalt="封鎖された家庭科室からの脱出"></h1>
+    <h1 class="main-title"><img src="怪物がさまよう研究所からの脱出.ai”></h1>
     <!-- タイトルエリア　ここまで -->
     <section class="section">
       <div class="container">
