--- a/hint2.html
+++ b/hint2.html
@@ -23,9 +23,8 @@
   </header>
   <main class="main hint-page">
     <!-- タイトルエリア　ここから -->
-    <h1 class="main-title"><img src="スクリーンショット 2021-09-14 21.52.50.png alt="封鎖された家庭科室からの脱出"></h1>
-    <!-- タイトルエリア　ここまで -->
-    <section class="section">
+    <h1 class="main-title"><img src="怪物がさまよう研究所からの脱出.ai "封鎖された家庭科室からの脱出"></h1>
+    <!-- タイトルエリア　ここまで -->   <section class="section">
       <div class="container">
         <div class="box bg-color--subcolor">
           <h2 class="section-title--border">ヒント集</h2>
