--- a/hint2.html
+++ b/hint2.html
@@ -41,7 +41,7 @@
           <div class="column">
             <div class="card">
               <h3 class="card__title">ヒント<svg class="card__arrow"><use xlink:href="#arrow"></use></svg></h3>
-              <p class="card__content">テキストテキストテキストテキストテキスト</p>
+              <p class="card__content">１、カメラで撮るものは？　２、竹刀を使う競技は？</p>
             </div>
               
  <!-- 2-2ヒント追加
@@ -62,7 +62,7 @@
           <div class="column">
             <div class="card">
               <h3 class="card__title">答え<svg class="card__arrow"><use xlink:href="#arrow"></use></svg></h3>
-              <p class="card__content">いいい</p>
+              <p class="card__content">真剣</p>
             </div>
               
 <!-- 2-2答え追加
