--- a/hint2.html
+++ b/hint2.html
@@ -54,7 +54,7 @@
  <!-- 2-3ヒント追加
         　　 <div class="card">
               <h3 class="card__title">2-3ヒント<svg class="card__arrow"><use xlink:href="#arrow"></use></svg></h3>
-              <p class="card__content">テキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
+              <p class="card__content">1,カメラでとるものは？２、竹刀を使う　競技は？</p>
             </div>
 2-3ヒント追加ここまで -->
               
