--- a/main.html
+++ b/main.html
@@ -39,8 +39,8 @@
   
             <div class="container">
               <figure class="image__container">
-                <img src="前後左右.ai alt=">
-              </figure>               
+                <img src="みご左右.png">
+              </figure>
  <!--  YouTube貼り付け
               <div class="youtube__container">
                 <div class="youtube">
@@ -129,8 +129,7 @@ Youtube貼り付けここまで -->
                 <div class="column">
                   <!-- STAGE2-1問題セクション　ここから -->
                   <figure class="image__container">
-                    <img src="真剣.ai">alt=
-                                         
+                    <img src="古今東西.png">alt=                                     
                   </figure>
                   <!-- STAGE2-1問題セクション　ここまで -->
                   <!-- STAGE2-1解答入力セクション　ここから -->
@@ -202,7 +201,7 @@ Youtube貼り付けここまで -->
               このハッキングを解かなければ怪物が外の世界に解き放たれてしまう。<br>
               暗号をときハッキングを解除しろ。</p>
             <figure class="image__container">
-              <img src="一の数問題.ai ">
+              <img src="リモコン.png">
                       
             </figure>
           </div>
