--- a/index.html
+++ b/index.html
@@ -23,9 +23,8 @@
   </header>
   <main class="main index-page">
     <!-- タイトルエリア　ここから -->
-    <h1 class="main-title"><img src="assets/images/top-image.png" alt="怪物がさまよう研究所からの脱出"></h1>
-    <!-- タイトルエリア　ここまで -->
-    <section class="section section--story">
+    <h1 class="main-title"><img src="メイン画像.png" alt="怪物がさまよう研究所からの脱出"></h1>
+    <!-- タイトルエリア　ここまで --><section class="section section--story">
       <div class="container">
         <h2 class="section-title section-title--keycolor section-title--story">ストーリー</h2>
                   <div class="story">
